# ai-librarian

./: .gitignore  README.md  pyproject.toml
analysis/: classification_results.json
examples/: analyze_uwm_questions.py  model_comparison.py
notebooks/: eda.ipynb
questions/: uwm_questions.json
src/evaluation/: evaluator.py
src/models/: base_model.py  deepseek_model.py  gemini_model.py  llama_model.py  model_factory.py  ollama_model.py  open_source_model.py  openai_model.py  qwen_model.py
