[project]
name = "ai-librarian"
version = "0.1.0"
description = "AI-powered library services enhancement project"
requires-python = ">=3.11, <3.12"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.2",
    "openai>=1.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "langchain>=0.0.200",
    "sentence-transformers>=2.2.2",
    "google-generativeai>=0.3.0",
    "safetensors>=0.3.1",
    "jupyter>=1.0.0",
    "matplotlib>=3.4.3",
    "seaborn>=0.11.2",
    "plotly>=5.13.0",
    "python-dotenv>=0.19.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.9.3",
    "aiohttp>=3.8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]
